--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "start": "node bin/www",
     "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
-    "prd": "cross-env NODE_ENV=production pm2 start bin/www -i 4",
+    "prd": "cross-env NODE_ENV=production pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@cloudbase/node-sdk": "^2.3.5",
     "debug": "^4.1.1",
+    "http-server": "^0.12.3",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
@@ -24,6 +25,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "mongoose": "^5.10.13",
+    "pm2": "^4.5.0",
     "pug": "^2.0.3",
     "xss": "^1.0.8"
   },
